engine/tests/fixtures/invalid/http-responses/actor-user.tg
actor actor_user {
  name "User"
  description "Fixture actor for invalid HTTP responses tests"

  status active
}
